Development Portal (2017-11-21 shi)
==============================
Display comments for baseline in SAVi
Add collapse buttons for each result chunk
Add counter increments for result and indicator
Fixed Print-friendly css for transaction tables
Updated Print-friendly css
Add new columns for table views (projects, list/donor/sector activities)
Updated footer text
Updated main css
Updated table headers and titles
Add table header to main tables (active/ended)


Development Portal (2017-11-18 shi)
==============================
Updated indicator subtitle in SAVi


Development Portal (2017-11-14 shi)
==============================
Fixed baseline clone in SAVi result
Display indicator measure type code in SAVi result
Minor fix transaction table
Update all themes
Display percentage sign for measure type


Development Portal (2017-11-07 shi)
==============================
Fixed percentage in results (UTC months)


Development Portal (2017-11-03 shi)
==============================
Fix many multiple sectors in SAVi
Update all themes
Fix many multiple countries in SAVi
Add collapse buttons 


Development Portal (2017-11-01 shi)
==============================
Fix @ref conversion for participating, provider, receiver orgs


Development Portal (2017-10-27 shi)
==============================
Update csv headers for list(activities, budget, transactions)


Development Portal (2017-10-26 shi)
==============================
Fix n+2 titles in document-link
Add category codes for document-link
Add element count
Add check for counting only dac sectors
Add css attribute selector for spaces in links (pdf)
Update all themes
Disable link if participating-org is not publisher
Disable link if receiver/provider-org is not publisher


Development Portal (2017-10-24 shi)
==============================
Display participating-org regardless of case for all themes


Development Portal (2017-10-23 shi)
==============================
Lookup participating-org@ref