@@ -404,7 +404,7 @@ ul.chosen-choices	{border-radius:6px;}
 /*	Table header styles
 	============================================= */
 th.titles					{color:#000; text-align:left; padding:15px 0 15px 20px; border-bottom:1px solid #000;}
-th.titles:nth-child(1), th.titles:nth-child(3),
+th.titles:nth-child(1), th.titles:nth-child(3), th.titles:nth-child(4),
 th.titles:last-child		{padding:15px 20px 10px 0; text-align:right; font-size:0.9em;}
 th.titles:last-child		{min-width:100px;}
 
