@@ -1,3 +1,13 @@
+Development Portal (2017-12-06 shi)
+==============================
+Fix sector/country counts when there are more activities on a SAVi page
+
+
+Development Portal (2017-11-28 shi)
+==============================
+Update font alignment for titles in table
+
+
 Development Portal (2017-11-21 shi)
 ==============================
 Display comments for baseline in SAVi
@@ -10,6 +20,7 @@ Updated footer text
 Updated main css
 Updated table headers and titles
 Add table header to main tables (active/ended)
+Fix column number for alert in tables
 
 
 Development Portal (2017-11-18 shi)
